--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lessify/angular",
+  "name": "@lessify/angular-core",
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
@@ -47,5 +47,16 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 9.1.4.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Lessify/lessify-angular.git"
+  },
+  "author": "Lessify",
+  "bugs": {
+    "url": "https://github.com/Lessify/lessify-angular/issues"
+  },
+  "homepage": "https://github.com/Lessify/lessify-angular#readme"
 }
