--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -7,7 +7,7 @@
   "homepage": "https://github.com/Lessify/lessify-angular",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Lessify/lessify-angular.git"
+    "url": "git+https://github.com/Lessify/lessify-angular.git"
   },
   "bugs": {
     "url": "https://github.com/Lessify/lessify-angular/issues"
@@ -17,5 +17,9 @@
     "@angular/core": ">=8.0.0",
     "tslib": "^1.10.0",
     "rxjs": ">=6.3.0"
+  },
+  "main": "karma.conf.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
