add integration with Lessify and ngx-translate

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lessify/angular-core",
-  "version": "0.0.1",
+  "version": "0.0.8",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~9.1.4",
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
+    "@ngx-translate/core": "11.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
