add support for Transloco

--- a/angular.json
+++ b/angular.json
@@ -82,6 +82,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "core"
+    }
+  },
+  "defaultProject": "core",
+  "cli": {
+    "analytics": false
+  }
 }
