--- a/projects/tools/package.json
+++ b/projects/tools/package.json
@@ -2,7 +2,7 @@
   "name": "@lessify/angular-tools",
   "description": "",
   "author": "Lessify",
-  "version": "0.0.2",
+  "version": "0.1.5",
   "license": "MIT",
   "homepage": "https://github.com/Lessify/lessify-angular",
   "repository": {
@@ -12,7 +12,7 @@
   "bugs": {
     "url": "https://github.com/Lessify/lessify-angular/issues"
   },
-  "schematics": "./src/lib/collection.json",
+  "schematics": "./schematics/collection.json",
   "peerDependencies": {
     "@angular/common": "^9.1.4",
     "@angular/core": "^9.1.4",
@@ -20,6 +20,6 @@
   },
   "main": "karma.conf.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:schematics": "tsc -p tsconfig.schematics.json"
   }
 }
