--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -2,7 +2,7 @@
   "name": "@lessify/angular-core",
   "description": "",
   "author": "Lessify",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license": "MIT",
   "homepage": "https://github.com/Lessify/lessify-angular",
   "repository": {
@@ -17,6 +17,10 @@
     "@angular/core": ">=8.0.0",
     "tslib": "^1.10.0",
     "rxjs": ">=6.3.0"
+  },
+  "optionalDependencies": {
+    "@ngx-translate/core": ">=11.0.0",
+    "@ngneat/transloco": ">=2.0.0"
   },
   "main": "karma.conf.js",
   "scripts": {
