--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -2,7 +2,7 @@
   "name": "@lessify/angular-core",
   "description": "",
   "author": "Lessify",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "license": "MIT",
   "homepage": "https://github.com/Lessify/lessify-angular",
   "repository": {
@@ -15,7 +15,7 @@
   "peerDependencies": {
     "@angular/common": ">=8.0.0",
     "@angular/core": ">=8.0.0",
-    "tslib": "^1.10.0",
+    "tslib": ">=1.10.0",
     "rxjs": ">=6.3.0"
   },
   "optionalDependencies": {
