--- a/projects/tools/package.json
+++ b/projects/tools/package.json
@@ -16,10 +16,12 @@
   "peerDependencies": {
     "@angular/common": ">=8.0.0",
     "@angular/core": ">=8.0.0",
-    "@angular-devkit/schematics": ">=8.0.0",
-    "tslib": "^1.10.0"
+    "@angular-devkit/schematics": ">=8.0.0"
   },
   "main": "karma.conf.js",
+  "dependencies": {
+    "tslib": "^2.0.0"
+  },
   "scripts": {
     "build:schematics": "tsc -p tsconfig.schematics.json"
   }
