--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "scripts": {
     "ng": "ng",
+    "start": "ng serve --open",
+    "build": "ng build",
     "build:core": "ng build core",
     "build:core-prod": "ng build core --prod",
     "build:tools": "ng build tools",
@@ -15,17 +17,19 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@angular/animations": "~10.2.4",
-    "@angular/common": "~10.2.4",
-    "@angular/compiler": "~10.2.4",
-    "@angular/core": "~10.2.4",
-    "@angular/forms": "~10.2.4",
-    "@angular/platform-browser": "~10.2.4",
-    "@angular/platform-browser-dynamic": "~10.2.4",
     "@angular-devkit/schematics": "~10.2.3",
-    "@angular/router": "~10.2.4",
-    "@ngx-translate/core": "13.0.0",
+    "@angular/animations": "^10.2.5",
+    "@angular/cdk": "^10.2.7",
+    "@angular/common": "^10.2.5",
+    "@angular/compiler": "^10.2.5",
+    "@angular/core": "^10.2.5",
+    "@angular/forms": "^10.2.5",
+    "@angular/material": "^10.2.7",
+    "@angular/platform-browser": "^10.2.5",
+    "@angular/platform-browser-dynamic": "^10.2.5",
+    "@angular/router": "^10.2.5",
     "@ngneat/transloco": "2.20.1",
+    "@ngx-translate/core": "13.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -34,23 +38,23 @@
     "@angular-devkit/build-angular": "~0.1002.3",
     "@angular-devkit/build-ng-packagr": "~0.1002.3",
     "@angular/cli": "~10.2.3",
-    "@angular/compiler-cli": "~10.2.4",
-    "@angular/language-service": "~10.2.4",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
+    "@angular/compiler-cli": "^10.2.5",
+    "@angular/language-service": "^10.2.5",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.20.10",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "^5.0.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "ng-packagr": "^10.1.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
     "typescript": "~4.0.7"
   },
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 9.1.4.",
