--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "ng": "ng",
     "start": "ng serve --open",
     "build": "ng build",
-    "build:prod": "ng build --prod",
+    "build:prod": "ng build --configuration production",
     "build:core": "ng build core",
-    "build:core-prod": "ng build core --prod",
+    "build:core-prod": "ng build core --configuration production",
     "build:tools": "ng build tools",
-    "build:tools-prod": "ng build tools --prod && npm run build:tools-schematics",
+    "build:tools-prod": "ng build tools --configuration production && npm run build:tools-schematics",
     "build:tools-schematics": "npm run build:schematics --prefix ./projects/tools",
     "test": "ng test",
     "lint": "ng lint",
@@ -20,12 +20,12 @@
   "dependencies": {
     "@angular-devkit/schematics": "~13.3.0",
     "@angular/animations": "^13.3.0",
-    "@angular/cdk": "^12.2.13",
+    "@angular/cdk": "^13.3.0",
     "@angular/common": "^13.3.0",
     "@angular/compiler": "^13.3.0",
     "@angular/core": "^13.3.0",
     "@angular/forms": "^13.3.0",
-    "@angular/material": "^12.2.13",
+    "@angular/material": "^13.3.0",
     "@angular/platform-browser": "^13.3.0",
     "@angular/platform-browser-dynamic": "^13.3.0",
     "@angular/router": "^13.3.0",
