--- a/projects/tools/package.json
+++ b/projects/tools/package.json
@@ -2,7 +2,7 @@
   "name": "@lessify/angular-tools",
   "description": "",
   "author": "Lessify",
-  "version": "13.1.3",
+  "version": "13.2.0",
   "license": "MIT",
   "homepage": "https://github.com/Lessify/lessify-angular",
   "repository": {
@@ -16,7 +16,8 @@
   "peerDependencies": {
     "@angular/common": ">=13.0.0",
     "@angular/core": ">=13.0.0",
-    "@angular-devkit/schematics": ">=13.0.0"
+    "@angular-devkit/schematics": ">=13.0.0",
+    "axios": "^0.27.2"
   },
   "main": "karma.conf.js",
   "dependencies": {
