--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "@angular/router": "^13.3.0",
     "@ngneat/transloco": "3.2.0",
     "@ngx-translate/core": "13.0.0",
+    "axios": "^1.1.2",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.5",
-    "axios": "^0.27.2"
+    "zone.js": "~0.11.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.0",
