--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lessify/angular-core",
-  "version": "14.0.0",
+  "version": "17.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open",
@@ -19,32 +19,32 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@angular-devkit/schematics": "^14.2.10",
-    "@angular/animations": "^14.2.12",
-    "@angular/cdk": "^14.2.7",
-    "@angular/common": "^14.2.12",
-    "@angular/compiler": "^14.2.12",
-    "@angular/core": "^14.2.12",
-    "@angular/forms": "^14.2.12",
-    "@angular/material": "^14.2.7",
-    "@angular/platform-browser": "^14.2.12",
-    "@angular/platform-browser-dynamic": "^14.2.12",
-    "@angular/router": "^14.2.12",
-    "@ngneat/transloco": "4.2.2",
-    "@ngx-translate/core": "14.0.0",
+    "@angular-devkit/schematics": "^17.0.8",
+    "@angular/animations": "^17.0.8",
+    "@angular/cdk": "^16.2.12",
+    "@angular/common": "^17.0.8",
+    "@angular/compiler": "^17.0.8",
+    "@angular/core": "^17.0.8",
+    "@angular/forms": "^17.0.8",
+    "@angular/material": "^16.2.12",
+    "@angular/platform-browser": "^17.0.8",
+    "@angular/platform-browser-dynamic": "^17.0.8",
+    "@angular/router": "^17.0.8",
+    "@ngneat/transloco": "5.0.10",
+    "@ngx-translate/core": "15.0.0",
     "axios": "^0.27.2",
-    "rxjs": "~6.6.7",
+    "rxjs": "^7.4.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.5"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.10",
-    "@angular/cli": "^14.2.10",
-    "@angular/compiler-cli": "^14.2.12",
-    "@angular/language-service": "^14.2.12",
+    "@angular-devkit/build-angular": "^17.0.8",
+    "@angular/cli": "^17.0.8",
+    "@angular/compiler-cli": "^17.0.8",
+    "@angular/language-service": "^17.0.8",
     "@types/jasmine": "^3.6.9",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.20.10",
+    "@types/node": "^20.10.6",
     "codelyzer": "^6.0.2",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -53,11 +53,11 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "ng-packagr": "^14.2.2",
+    "ng-packagr": "^17.0.3",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "^6.1.3",
-    "typescript": "~4.6.2"
+    "typescript": "~5.2.2"
   },
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 9.1.4.",
   "main": "index.js",
