--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "@angular/router": "^14.2.12",
     "@ngneat/transloco": "4.2.2",
     "@ngx-translate/core": "14.0.0",
-    "axios": "^0.27.2",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.5"
+    "zone.js": "~0.11.5",
+    "proxy-agent": "^6.3.0",
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.10",
@@ -45,6 +46,7 @@
     "@types/jasmine": "^3.6.9",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.20.10",
+    "@types/node-fetch": "^2.5.12",
     "codelyzer": "^6.0.2",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
